[package]
name = "lint-init"
version = "0.2.0"
edition = "2021"
description="A cli for init lint config that wrote by rust."
license = "MIT"
repository = "https://github.com/echoLC/lint_init"
keywords = ["cli", "eslint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = { version = "3.0.14", features = ["derive"] }
relative-path = "1.6.1"
execute = "0.2.10"
dialoguer = "0.10.0"